--- a/AngularApp/angular.json
+++ b/AngularApp/angular.json
@@ -91,8 +91,8 @@
                         },
                         "githubprod": {
                             "outputPath":"../docs",
-                            "baseHref":"/Website/",
-                            "deployUrl":"/Website/",
+                            "baseHref":"/twilio_segment_app/",
+                            "deployUrl":"/twilio_segment_app/",
                             "budgets": [
                                 {
                                     "type": "initial",
