--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~12.2.3",
     "marker-animate-unobtrusive": "^0.2.9",
     "rxjs": "~6.6.0",
+    "socket.io-client": "^4.2.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
