--- a/AngularApp/backend/python/Procfile
+++ b/AngularApp/backend/python/Procfile
@@ -1,2 +1,2 @@
-web: gunicorn --worker-class eventlet -w 1 flask_app_prod:app
+web: gunicorn -k gevent -w 1 flask_app_prod:app
 heroku ps:scale web=1
